--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/Images/Webicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Verdant</title>
+    <title>ArchiLink</title>
     <!-- Saira Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
